@@ -2,7 +2,7 @@
  * file.h: Part of GNU CSSC.
  * 
  * 
- *    Copyright (C) 1997,2001,2007 Free Software Foundation, Inc. 
+ *    Copyright (C) 1997,2001,2007,2008 Free Software Foundation, Inc. 
  * 
  *    This program is free software: you can redistribute it and/or modify
  *    it under the terms of the GNU General Public License as published by
@@ -51,6 +51,7 @@ FILE *stdout_to_stderr();
 int stdin_is_a_tty();
 FILE *open_null();
 int is_readable(const char *name);
+int is_directory(const char *name);
 int file_exists(const char *name);
 const char *get_user_name();
 int user_is_group_member(gid_t gid);
