@@ -1,3 +1,11 @@
+2008-01-07  James Youngman  <jay@gnu.org>
+
+
+	* fileiter.cc (sccs_file_iterator): Ignore subdirectories, even if
+	they do start with "s.".
+	* file.cc (is_directory): New function.
+	* file.h: Declare is_directory.
+
 2008-01-06  James Youngman  <jay@gnu.org>
 
 	* sf-delta.cc (add_delta): Removed obsolete "XXX" comments.
